<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:selectable="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/specimen_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp" />

        <live.page.android.views.select.Selectable
            android:id="@+id/species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            selectable:hint="@string/species"
            selectable:url="/species"/>

        <live.page.android.views.select.Selectable
            android:id="@+id/authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            selectable:hint="@string/authors"
            selectable:url="/switch"
            selectable:multiple="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/localize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@android:drawable/ic_menu_mylocation" />

            <TextView
                android:id="@+id/localization"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:hint="@string/localization" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/specimen_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/specimen_publish"
                android:textAlignment="center" />

            <Button
                android:id="@+id/specimen_draft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/specimen_draft"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>